Fix to requirements extension and added a title to html

--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-
+<title>[mobLee] PHP - StackOverflow</title>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
